# SimpleFastRegex

./: .gitignore  Cargo.toml  example.py  pyproject.toml  simple_fast_regex.pyi
src/: lib.rs
